--- a/pony/G4/S1.md
+++ b/pony/G4/S1.md
@@ -12,6 +12,8 @@ filename: ponyG4S1
 好好記得這張他媽的圖(是Derpy阿)
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_2.html)
+<p id="p0"></p>
+<iframe id="m0" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E02 
 ## Friendship is Magic, part 2
@@ -21,6 +23,8 @@ filename: ponyG4S1
 ![](https://static.wikia.nocookie.net/mlp/images/e/e9/Pinkie_Pie_a_party_S01E02.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_6.html)
+<p id="p1"></p>
+<iframe id="m1" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E03
 ## The Ticket Master
@@ -30,6 +34,8 @@ filename: ponyG4S1
 ![](https://static.wikia.nocookie.net/mlp/images/f/fc/Rarity_wet_S01E03.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_14.html)
+<p id="p2"></p>
+<iframe id="m2" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E04
 ## Applebuck Season
@@ -39,6 +45,8 @@ filename: ponyG4S1
 ![](https://static.wikia.nocookie.net/mlp/images/2/22/Applejack_upside_down_S01E04.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic.html)
+<p id="p3"></p>
+<iframe id="m3" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E05
 ## Griffon the Brush Off
@@ -48,6 +56,8 @@ filename: ponyG4S1
 ![](https://static.wikia.nocookie.net/mlp/images/e/ed/Pinkie_Pie_and_Rainbow_Dash_Shock_S1E5.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_9.html)
+<p id="p4"></p>
+<iframe id="m4" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E06
 ## Boast Busters
@@ -57,6 +67,8 @@ filename: ponyG4S1
 ![](https://static.wikia.nocookie.net/mlp/images/4/49/Twilight_utterly_exasperated_S1E06.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_16.html)
+<p id="p5"></p>
+<iframe id="m5" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E07
 ## Dragonshy
@@ -67,6 +79,8 @@ filename: ponyG4S1
 STRIKE<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_23.html)
+<p id="p6"></p>
+<iframe id="m6" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E08
 ## Look Before You Sleep
@@ -77,6 +91,8 @@ STRIKE<br>
 DERPY!!!
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic.html)
+<p id="p7"></p>
+<iframe id="m7" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E09
 ## Bridle Gossip
@@ -86,6 +102,8 @@ DERPY!!!
 ![](https://static.wikia.nocookie.net/mlp/images/4/4e/Applejack_and_Rainbow_flying_toward_Zecora%27s_hut_S1E09.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_6.html)
+<p id="p8"></p>
+<iframe id="m8" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E10
 ## Swarm of the Century
@@ -95,6 +113,8 @@ DERPY!!!
 ![](https://static.wikia.nocookie.net/mlp/images/a/a9/Pinkie_Pie_trombone_outro_S1E10.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_13.html)
+<p id="p9"></p>
+<iframe id="m9" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E11
 ## Winter Warp up
@@ -105,6 +125,8 @@ DERPY!!!
 Hmmmmm....<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_20.html)
+<p id="p10"></p>
+<iframe id="m10" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E12
 ## Call of the Cutie
@@ -115,6 +137,8 @@ Hmmmmm....<br>
 推薦:[Pinkie Brew](https://www.youtube.com/watch?v=682pneYoP0c)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic.html)
+<p id="p11"></p>
+<iframe id="m11" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E13
 ## Fall Weather Friends
@@ -124,6 +148,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/c/cb/Rainbow_laughing_S1E13.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_3.html)
+<p id="p12"></p>
+<iframe id="m12" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E14
 ## Suited For Success
@@ -134,6 +160,8 @@ Hmmmmm....<br>
 20% Cooler<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_10.html)
+<p id="p13"></p>
+<iframe id="m13" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E15
 ## Feeling Pinkie Keen
@@ -143,6 +171,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/e/ee/Cropped_Animated_Twilight_Rapidash_S1E15.gif/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_17.html)
+<p id="p14"></p>
+<iframe id="m14" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E16
 ## Sonic Rainboom
@@ -152,6 +182,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/f/f0/Rainbow_Dash_performing_a_sonic_rainboom_S1E16.gif/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic.html)
+<p id="p15"></p>
+<iframe id="m15" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E17
 ## Stare Master
@@ -161,6 +193,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/1/19/Fluttershy_Stare_S01E17.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_2.html)
+<p id="p16"></p>
+<iframe id="m16" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E18
 ## The Show Stoppers
@@ -170,6 +204,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/c/c1/Apple_Bloom_trips_S1E18.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_9.html)
+<p id="p17"></p>
+<iframe id="m17" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S1E19
 ## A Dog and Pony show
@@ -179,7 +215,9 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/3/35/Spike_and_Twilight_breaking_the_door_S1E19.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_16.html)
- 
+<p id="p18"></p>
+<iframe id="m18" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+
 # S1E20 
 ## Green Isn't Your Color
 ![S1E20](https://static.wikia.nocookie.net/mlp/images/9/9f/Fluttershy_happy_S1E20.png/revision/latest)
@@ -188,6 +226,8 @@ Hmmmmm....<br>
 ![S1E20](https://static.wikia.nocookie.net/mlp/images/5/50/Ponies_don%27t_like_Fluttershy%27s_performance_S01E20.png/revision/latest)
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_21.html)
+<p id="p19"></p>
+<iframe id="m19" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E21 
 ## Over a Barrel
@@ -197,6 +237,8 @@ Hmmmmm....<br>
 ![S1E20](https://static.wikia.nocookie.net/mlp/images/5/59/Pinkie_Pie_Breaking_Fourth_Wall_Looney_Tunes_S1E21.png/revision/latest)
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_21.html)
+<p id="p20"></p>
+<iframe id="m20" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E22 
 ## A Bird in the Hoof
@@ -206,6 +248,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/4/47/Twilight_gasps_S01E22.png/revision/latest)
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_28.html)
+<p id="p21"></p>
+<iframe id="m21" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E23 
 ## The Cutie Mark Chronicles
@@ -215,6 +259,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/6/69/First_Pinkie_Pie_smile_S1E23.png/revision/latest)
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic.html)
+<p id="p22"></p>
+<iframe id="m22" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 
 
@@ -226,7 +272,9 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/2/25/Frightened_Spike_jumps_on_Twilight%27s_back_S1E24.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_2.html)
-    
+<p id="p23"></p>
+<iframe id="m23" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+   
 # S1E25
 ## Party of One
 ![](https://static.wikia.nocookie.net/mlp/images/b/b2/Pinkie_Pie_invites_Twilight_S1E25.png/revision/latest)
@@ -235,6 +283,8 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/f/ff/Rainbow_Dash_drags_Pinkie_Pie_to_the_farm_S1E25.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_6.html)
+<p id="p24"></p>
+<iframe id="m24" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S1E26
 ## The Best Night Ever
@@ -244,6 +294,24 @@ Hmmmmm....<br>
 ![](https://static.wikia.nocookie.net/mlp/images/1/19/Fluttershy_caught_in_her_own_trap_S1E26.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_13.html)    
+<p id="p25"></p>
+<iframe id="m25" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # 前往下一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S2)    
+
+<script>
+var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/json/S1.json"
+    var request = new XMLHttpRequest();
+    request.open('GET', requestURL);
+    // request.responseType = 'json';
+    request.send();
+    request.onload = function() {
+    var data2 = JSON.parse(request.responseText);
+    var step;
+    for (step=0; step < 12 ; step++){
+        document.getElementById("p"+ step).innerHTML =("Password: "+ (data2.episode[step].pw))
+        document.getElementById("m"+ step).src =(data2.episode[step].link)
+    
+        }};
+</script>
