--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -78,6 +78,12 @@ var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github
         vid.referrerPolicy = "no-referrer-when-downgrade"
         vid.allowFullscreen = "true"
         vid.id = ("m"+ step);
+        if ((data2.episode[step].after)===""){           
+        }else{
+            var after = document.createElement('p');
+            after.innerHTML =((data2.episode[step].after));
+            after.id = ("after"+ step);    
+        }
         var element = document.getElementById("content");
         element.insertAdjacentElement("beforeend", tit);
         element.insertAdjacentElement("beforeend", nam);
@@ -97,6 +103,10 @@ var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github
         element.insertAdjacentElement("beforeend", lin);
         element.insertAdjacentElement("beforeend", par);
         element.insertAdjacentElement("beforeend", vid);
+        if ((data2.episode[step].after)===""){           
+        }else{
+            element.insertAdjacentElement("beforeend", after);
+        }
         // ,nam,img1,img2,img3,img4,eqe,lin,par,vid
         // document.getElementById("p"+ step).innerHTML =("Password: "+ (data2.episode[step].pw));
         // document.getElementById("m"+ step).src =(data2.episode[step].link);
