--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -5,7 +5,7 @@ filename: ponyG4S3
 --- 
 <script>
 document.addEventListener('DOMContentLoaded',function(){
-    var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/json/test.json"
+    var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/json/S3.json"
         var request = new XMLHttpRequest();
         request.open('GET', requestURL);
         // request.responseType = 'json';
@@ -126,6 +126,7 @@ document.addEventListener('DOMContentLoaded',function(){
         };
     var footer = document.createElement('footer');
     footer.className=("site-footer");
+    var element = document.getElementById("content");
     element.insertAdjacentElement("beforeend", footer);
     })
 </script>
