--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -124,9 +124,9 @@ document.addEventListener('DOMContentLoaded',function(){
             element.insertAdjacentElement("beforeend", nextlin);
         }
         };
-    var footer = document.createElement('footer');
-    footer.className=("site-footer");
-    var element = document.getElementById("content");
-    element.insertAdjacentElement("beforeend", footer);
+    // var footer = document.createElement('footer');
+    // footer.className=("site-footer");
+    // var element = document.getElementById("content");
+    // element.insertAdjacentElement("beforeend", footer);
     })
 </script>
