--- a/pony/G4/S3.md
+++ b/pony/G4/S3.md
@@ -123,8 +123,7 @@ document.addEventListener('DOMContentLoaded',function(){
             element.insertAdjacentElement("beforeend", next);
             element.insertAdjacentElement("beforeend", nextlin);
         }
-        var footer = document.createElement('footer');
-        footer.className=("site-footer");
+        var footer = document.querySelector('#content footer');
         element.insertAdjacentElement("beforeend", footer);
         };
     })
