--- a/pony/G4/S1.md
+++ b/pony/G4/S1.md
@@ -3,315 +3,5 @@ title: Twilight's Library Season 1
 layout: backpony
 filename: ponyG4S1
 --- 
-# S1E01 
-## Friendship is Magic, part 1
-![](https://static.wikia.nocookie.net/mlp/images/b/b5/Opening_Book_S01E01.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/7/7f/Twilight_hot1_S01E01.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/32/Twilight_hot2_S01E01.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/2/28/Pinkie_Pie_excited_S01E01.png/revision/latest)<br>
-好好記得這張他媽的圖(是Derpy阿)
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_2.html)
-<p id="p0"></p>
-<iframe id="m0" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E02 
-## Friendship is Magic, part 2
-![](https://static.wikia.nocookie.net/mlp/images/6/65/Twilight_screams_while_freefalling_S1E02.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/3d/Manticore_licking_Fluttershy%27s_mane_S1E02.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/bd/Twilight_curled_up_Elements_of_Harmony_S1E02.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/e9/Pinkie_Pie_a_party_S01E02.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_6.html)
-<p id="p1"></p>
-<iframe id="m1" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E03
-## The Ticket Master
-![](https://static.wikia.nocookie.net/mlp/images/c/ce/Rainbow_being_pulled_away_S1E3.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/e4/Applejack_and_Rainbow_Dash_hoof_wrestling_S1E03.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/d/d9/Rain_drenching_Twilight_S1E3.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/f/fc/Rarity_wet_S01E03.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic_14.html)
-<p id="p2"></p>
-<iframe id="m2" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E04
-## Applebuck Season
-![](https://static.wikia.nocookie.net/mlp/images/1/14/Successful_Applejack_and_Winona_S1E04.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/5/56/Applejack_take_four_S1E04.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/8/85/Applejack_makes_a_face_when_Pinkie_asks_for_wheat_germ_S1E4.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/2/22/Applejack_upside_down_S01E04.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/11/my-little-pony-friendship-is-magic.html)
-<p id="p3"></p>
-<iframe id="m3" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E05
-## Griffon the Brush Off
-![](https://static.wikia.nocookie.net/mlp/images/3/32/Rainbow_Dash_crashes_into_a_mountain_S01E05.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/5/5c/Celestia_scroll_rain_S1E05.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/42/Gilda_grabs_Pinkie_by_the_neck_S1E05.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/ed/Pinkie_Pie_and_Rainbow_Dash_Shock_S1E5.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_9.html)
-<p id="p4"></p>
-<iframe id="m4" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E06
-## Boast Busters
-![](https://static.wikia.nocookie.net/mlp/images/4/47/Trixie_boasting_S1E06.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/e3/Applejack_tied_up_S1E06.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/a6/Trixie_screaming_S1E06.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/49/Twilight_utterly_exasperated_S1E06.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_16.html)
-<p id="p5"></p>
-<iframe id="m5" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E07
-## Dragonshy
-![](https://static.wikia.nocookie.net/mlp/images/7/73/Fluttershy_bringing_fish_to_ferrets_S1E07.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/d/d4/A_grumpy_Rainbow_Dash_S01E07.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/ad/Pinkie_Pie_playing_with_the_rubber_chicken_S1E7.gif/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/2/2b/Ponies_knocked_out_S01E07.png/revision/latest)<br>
-STRIKE<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic_23.html)
-<p id="p6"></p>
-<iframe id="m6" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E08
-## Look Before You Sleep
-![](https://static.wikia.nocookie.net/mlp/images/a/a2/Sweetie_Drops_and_Derpy_clearing_branches_S01E08.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/8/8d/Applejack_misuses_the_hose_S1E08.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/5/5b/Applejack_chewing_S1E8.gif/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/a3/Twilight_hit_with_another_pillow_S1E08.png/revision/latest)<br>
-DERPY!!!
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2011/12/my-little-pony-friendship-is-magic.html)
-<p id="p7"></p>
-<iframe id="m7" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E09
-## Bridle Gossip
-![](https://static.wikia.nocookie.net/mlp/images/d/d2/Twilight_an_allergy_S1E09.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/47/Rainbow_Dash_smashing_through_door_S1E09.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/0/01/Rainbow_Dash_Upside_Down_S1E09.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/4e/Applejack_and_Rainbow_flying_toward_Zecora%27s_hut_S1E09.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_6.html)
-<p id="p8"></p>
-<iframe id="m8" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E10
-## Swarm of the Century
-![](https://static.wikia.nocookie.net/mlp/images/2/27/Pinkie_Pie_licks_cream_beard_S1E10.gif/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/5/5d/Swarm_flying_past_Twilight%2C_Rarity_and_Applejack_S01E10.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/a7/Rainbow_thrown_against_a_tree_S01E10.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/a9/Pinkie_Pie_trombone_outro_S1E10.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_13.html)
-<p id="p9"></p>
-<iframe id="m9" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E11
-## Winter Warp up
-![](https://static.wikia.nocookie.net/mlp/images/6/65/Twilight_with_birds_S1E11.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/9/9c/Snow_covered_Spike_and_Twilight_S1E11.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/c/c4/Twilight%27s_plan_backfires_S1E11.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/37/Twilight_running_with_beehive_on_her_head_S1E11.png/revision/latest)<br>
-Hmmmmm....<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic_20.html)
-<p id="p10"></p>
-<iframe id="m10" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E12
-## Call of the Cutie
-![](https://static.wikia.nocookie.net/mlp/images/9/97/Apple_Bloom_jumping_for_the_apple_S1E12.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/40/Apple_Bloom_doing_karate_S1E12.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/c/cc/Pinkie_Pie_happily_singing_the_cupcake_song_S1E12.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/bb/Scootaloo_commenting_on_Diamond_Tiara_S1E12.png/revision/latest)<br>
-推薦:[Pinkie Brew](https://www.youtube.com/watch?v=682pneYoP0c)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/01/my-little-pony-friendship-is-magic.html)
-<p id="p11"></p>
-<iframe id="m11" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E13
-## Fall Weather Friends
-![](https://static.wikia.nocookie.net/mlp/images/c/c7/Rainbow_Dash_gasping_S1E13.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/30/Applejack_dirty_S01E13.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/7/77/Rainbow_Dash_wins_Iron_Pony_competition_S1E13.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/c/cb/Rainbow_laughing_S1E13.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_3.html)
-<p id="p12"></p>
-<iframe id="m12" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E14
-## Suited For Success
-![](https://static.wikia.nocookie.net/mlp/images/2/23/Rainbow_Dash_%27the_what_now%27_S1E14.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/1/12/Rarity_being_overwhelmed_with_pressure_S1E14.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/b8/Rainbow_Dash_wants_her_dress_to_be_cool_S1E14.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/6/64/It%27s_all_in_the_presentation%21_S1E14.png/revision/latest)<br>
-20% Cooler<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_10.html)
-<p id="p13"></p>
-<iframe id="m13" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E15
-## Feeling Pinkie Keen
-![](https://static.wikia.nocookie.net/mlp/images/1/15/Twilight_freaking_out_S1E15.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/a/a1/Twilight_anvil_derp_S01E15.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/8/8b/For_Shame_Derpy_S1E15.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/ee/Cropped_Animated_Twilight_Rapidash_S1E15.gif/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic_17.html)
-<p id="p14"></p>
-<iframe id="m14" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E16
-## Sonic Rainboom
-![](https://static.wikia.nocookie.net/mlp/images/4/47/Fluttershy_deep_breath_S01E16.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/eb/Fluttershy_final_yay_S1E16.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/c/ca/Derpy_flying_around_in_Cloudsdale_cropped_2_S1E16.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/f/f0/Rainbow_Dash_performing_a_sonic_rainboom_S1E16.gif/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/02/my-little-pony-friendship-is-magic.html)
-<p id="p15"></p>
-<iframe id="m15" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E17
-## Stare Master
-![](https://static.wikia.nocookie.net/mlp/images/0/0c/Cutie_Mark_Crusaders_yay_S1E17.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/4f/Fluttershy_NO_S01E17.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/6/6b/Twilight_Sparkle_stone_S1E17.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/1/19/Fluttershy_Stare_S01E17.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_2.html)
-<p id="p16"></p>
-<iframe id="m16" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E18
-## The Show Stoppers
-![](https://static.wikia.nocookie.net/mlp/images/6/60/Applejack_crashing_down_S1E18.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/0/01/Apple_Bloom_stick_to_punches_and_kicks_S1E18.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/39/Scootaloo_slamming_her_head_on_the_piano_S01E18.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/c/c1/Apple_Bloom_trips_S1E18.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_9.html)
-<p id="p17"></p>
-<iframe id="m17" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
- 
-# S1E19
-## A Dog and Pony show
-![](https://static.wikia.nocookie.net/mlp/images/a/ad/Rarity%27s_signature_distressed_move_S1E19.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/4a/Main_crew_go_down_the_dog_hole_S1E19.gif/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/e5/Twilight_really_Spike_S1E19.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/35/Spike_and_Twilight_breaking_the_door_S1E19.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_16.html)
-<p id="p18"></p>
-<iframe id="m18" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E20 
-## Green Isn't Your Color
-![S1E20](https://static.wikia.nocookie.net/mlp/images/9/9f/Fluttershy_happy_S1E20.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/b9/Twilight_after_poking_her_eye_S1E20.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/42/Pinkie_Pie_eating_an_apple_S1E20.gif/revision/latest)
-![S1E20](https://static.wikia.nocookie.net/mlp/images/5/50/Ponies_don%27t_like_Fluttershy%27s_performance_S01E20.png/revision/latest)
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_21.html)
-<p id="p19"></p>
-<iframe id="m19" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E21 
-## Over a Barrel
-![](https://static.wikia.nocookie.net/mlp/images/5/54/Applejack_talks_to_the_tree_S1E21.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/0/08/Rainbow_Dash_hits_a_sign_S01E21.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/2/2f/Applejack_%22BRAEBURN%21%22_S01E21.png/revision/latest)
-![S1E20](https://static.wikia.nocookie.net/mlp/images/5/59/Pinkie_Pie_Breaking_Fourth_Wall_Looney_Tunes_S1E21.png/revision/latest)
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_21.html)
-<p id="p20"></p>
-<iframe id="m20" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E22 
-## A Bird in the Hoof
-![](https://static.wikia.nocookie.net/mlp/images/7/7a/Fluttershy_cutness_overload_S01E22.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/7/72/Rainbow_Dash_making_funny_face_S1E22.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/8/88/Pinkie_Pie_puts_a_pie_to_her_face_S1E22.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/4/47/Twilight_gasps_S01E22.png/revision/latest)
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic_28.html)
-<p id="p21"></p>
-<iframe id="m21" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E23 
-## The Cutie Mark Chronicles
-![](https://static.wikia.nocookie.net/mlp/images/f/fc/ScreamingCrusaders_S01E23.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/be/Filly_Applejack_in_Manehattan_3_S01E23.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/7/74/Filly_Fluttershy_amazed_by_her_surroundings_S1E23.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/6/69/First_Pinkie_Pie_smile_S1E23.png/revision/latest)
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/03/my-little-pony-friendship-is-magic.html)
-<p id="p22"></p>
-<iframe id="m22" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-
-
-# S1E24
-## Owl's Well That Ends Well
-![](https://static.wikia.nocookie.net/mlp/images/7/78/Spike_sneezes_fire_on_the_book_S1E24.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/3/3a/Owlowiscious_flying_past_Twilight_Sparkle%27s_library_S1E24.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/f/f7/Spike_burning_the_quill_S1E24.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/2/25/Frightened_Spike_jumps_on_Twilight%27s_back_S1E24.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_2.html)
-<p id="p23"></p>
-<iframe id="m23" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-   
-# S1E25
-## Party of One
-![](https://static.wikia.nocookie.net/mlp/images/b/b2/Pinkie_Pie_invites_Twilight_S1E25.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/1/15/Embedded_in_the_wall_S01E25.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/e/e8/Crazy_Pinkie_Pie_S1E25.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/f/ff/Rainbow_Dash_drags_Pinkie_Pie_to_the_farm_S1E25.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_6.html)
-<p id="p24"></p>
-<iframe id="m24" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# S1E26
-## The Best Night Ever
-![](https://static.wikia.nocookie.net/mlp/images/a/af/Pinkie_Pie_trampoline_jump_1_S1E26.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/b/bd/Spike_Giddy_up_S1E26.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/0/0d/Fluttershy_%22You%27re_going_to_LOVE_ME%21%22_S1E26.png/revision/latest)
-![](https://static.wikia.nocookie.net/mlp/images/1/19/Fluttershy_caught_in_her_own_trap_S1E26.png/revision/latest)<br>
-## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_13.html)    
-<p id="p25"></p>
-<iframe id="m25" allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-
-# 前往下一季
-[點擊此處](https://linbei9487.github.io/pony/G4/S2)    
-
-<script>
-var requestURL = "https://raw.githubusercontent.com/linbei9487/linbei9487.github.io/main/src/json/S1.json"
-    var request = new XMLHttpRequest();
-    request.open('GET', requestURL);
-    // request.responseType = 'json';
-    request.send();
-    request.onload = function() {
-    var data2 = JSON.parse(request.responseText);
-    var step;
-    for (step=0; step < 26 ; step++){
-        document.getElementById("p"+ step).innerHTML =("Password: "+ (data2.episode[step].pw))
-        document.getElementById("m"+ step).src =(data2.episode[step].link)
-    
-        }};
-</script>
+<div id="jsonindex">1</div>
+<script src="/src/js/auto.js"></script>
