--- a/pony/G4/S1.md
+++ b/pony/G4/S1.md
@@ -2,6 +2,7 @@
 title: Twilight's Library Season 1
 layout: backpony
 filename: ponyG4S1
+pony: true
 --- 
 <div id="jsonindex">1</div>
 <script src="/src/js/auto.js"></script>
