--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -2,6 +2,8 @@
 title: Twilight's Library Season 2
 layout: backpony
 filename: ponyG4S1
+buttontxt: Back to Twilight's Library
+buttonurl: https://linbei9487.github.io/pony/history
 --- 
 <div id="jsonindex">2</div>
 <script src="/src/js/auto.js"></script>
