--- a/pony/G4/S5.md
+++ b/pony/G4/S5.md
@@ -2,6 +2,8 @@
 title: Twilight's Library Season 5
 layout: backpony
 filename: ponyG4S5
+buttontxt: Back to Twilight's Library
+buttonurl: https://linbei9487.github.io/pony/history
 --- 
 # 回到上一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S4)
