--- a/pony/G4/S6.md
+++ b/pony/G4/S6.md
@@ -2,6 +2,8 @@
 title: Twilight's Library Season 6
 layout: backpony
 filename: ponyG4S2
+buttontxt: Back to Twilight's Library
+buttonurl: https://linbei9487.github.io/pony/history
 --- 
 # 回到上一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S5)
